# Banco-de-Dados---Python

API-dio-bank/: pyproject.toml
API-dio-bank/instance/: blog.sqlite
API-dio-bank/migrations/versions/: 138bb6a7d15d_initial_migration.py  814f443402b5_add_password_field.py  d712b9d20347_initial_migration.py  f2504f2ca5e6_add_active_attr_in_user.py
API-dio-bank/src/: app.py  db.py  schema.sql  utils.py
API-dio-bank/src/controllers/: auth.py  role.py  user.py
