[project]
name = "api-dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Oportugall",email = "lemgruberportugalleonardo@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask",
    "flask-sqlalchemy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
